Recommendation functionality added

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,4 @@
 PASS=JaclxbVe9xbFDuri
 USER=manubhav731
 URI=mongodb+srv://manubhav731:JaclxbVe9xbFDuri@muktirath.qx9wj.mongodb.net/?retryWrites=true&w=majority&appName=Muktirath
+API=AIzaSyD02pZv-HwmfJmNYCYZEgOde5PD7o9fhog
